deploy/service.yaml

kind: Service
apiVersion: v1
metadata:
  name: web-frontend
  namespace: 1test-tools
  labels:
    app: nginx-unprivileged
    app.kubernetes.io/component: nginx-unprivileged
    app.kubernetes.io/instance: nginx-unprivileged
    app.kubernetes.io/part-of: appassessment-app
    app.openshift.io/runtime-version: latest
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: nginx-unprivileged
    deploymentconfig: nginx-unprivileged
  type: ClusterIP
  sessionAffinity: None
